tests/models/struct/unnamed/u16/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    u16
);
fn main() {}
